36

ENHANCEMENTS:
* Support for dragging cards
* Visual feedback on mismatches
* Cursor when editing cards
* New help animation on first load
* Copy scores to clipboard (for import into Simple Graph)
* Notification when loading new games
* Slight delay after match before dealing new cards to allow for some
  scrutiny of results
* Addition of toolbar help menus
* Rebranding as Dimensions (a more apt name)
* Updated wiki page (See http://wiki.sugarlabs.org/go/Activities/Dimensions)
* New translations
(Tip of the hat to Mark Battley for great feedback and suggestions.)

35

ENHANCEMENTS:
* New translations

34

ENHANCEMENTS:
* New translations

BUG FIX:
* Fixed problem with animated cards missing destinations

33

ENHANCEMENTS:
* New translations
* New end-of-game graphics

32

ENHANCEMENT:
* Using Cairo graphics
* Animate loading of new cards

BUG FIX:
* Set robot time during "attract mode"

31

ENHANCEMENT:
* Animate matches when moving to discard pile

BUG FIX:
* FIx GPLv3 license address

30

ENHANCEMENTS:
* Switching buttons to radio buttons
* More button icon refactoring

29

ENHANCEMENT:
* "Standardized" icons

28

ENHANCEMENT:
* Added "attract mode" on first launch

27

ENHANCEMENTS:
* Smiley-face "reward" for finishing a game
* Improved workflow for importing custom cards

BUG FIXES:
* Work around datastore.find issue on 0.84 builds
* Work around chooser issues with old Sugar builds (#2398)

26

ENHANCEMENT:
* Import custom cards from Journal

25

ENHANCEMENTS:
* Quipu number game
* Optimization of sprite refresh

24

ENHANCEMENTS:
* Added beginner level
* Detect unsolvable game-play situations

23

BUG FIXES:
* Byron Corrales fixed the robot/word-edit conflict (#2057)
* General code cleanup

22

BUG FIX:
* Fixed SVG bug in old Sugar builds

21

BUG FIXES:
* general clean up of sprite library
* updated licenses

20

ENHANCEMENT:
* Added more combinations to the dice game, e.g., 5=4+1, 5=3+2

BUG FIXES:
* Fixed bug in sprite library